# librerIA

./: .gitignore  README.md  app.py  ingest.py  llm.py  mcp_server.py  pyproject.toml  query.py  storage.py  vector_store.py
docs/: WIKI.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  domain.ts  main.tsx  stores.ts  styles.css  types.ts
frontend/src/api/: client.ts  queryStream.ts
frontend/src/components/: BookCard.tsx  CharacterGraph.tsx  CharacterSheet.tsx  ChatMessage.tsx  EmptyState.tsx  ProgressCard.tsx  SourceList.tsx  StoryTimeline.tsx  UploadDropzone.tsx
frontend/src/hooks/: useBooks.ts  useIngest.ts  useQueryChat.ts
frontend/src/views/: BookAnalysisView.tsx  LibraryView.tsx  QueryView.tsx  SearchView.tsx  SettingsView.tsx
templates/: index.html
